Better rendering of response body: Tell highlight.js the correct language from Content-Type header instead of doing automatic detection, which sometimes does not work and is really slow. Also added options to show response body formatted and line-wrapped.

--- a/data/site/styles/directives/highlight-code.css
+++ b/data/site/styles/directives/highlight-code.css
@@ -1,4 +1,19 @@
+highlight-code {
+	display: block;
+	position: relative;
+}
+
+highlight-code .options {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 highlight-code pre {
-	margin: 0;
-	white-space: pre-wrap;
+    margin: 8px 0;
+}
+
+highlight-code pre.wrap {
+    white-space: pre-wrap;
+    word-break: break-all;
 }
